<resources>
	<string name="app_name">我要记账</string>
	<!-- 通用 -->
	<string name="not_implemented_yet">尚未实现</string>
	<!-- 导航滑动菜单（主菜单） -->
	<string name="account_browser">账目浏览</string>
	<string name="account_search">账目搜索</string>
	<string name="account_stat">账目分析与统计</string>
	<string name="settings">设置</string>
	<!--	-->
	<!-- 账目浏览界面（主界面） -->
	<string name="from_date">从 此日期</string>
	<string name="to_date">到 此日期</string>
	<string name="successfully_read">成功读取</string>
	<string name="successfully_saved_at">成功保存在</string>
	<!--	-->
	<!-- 按照 Google 官方的指示，必须提供这 2 个字符串，供无障碍服务使用 -->
	<string name="open_nav_drawer">打开滑动导航菜单</string>
	<string name="close_nav_drawer">关闭滑动导航菜单</string>
	<!--	-->
	<!-- 菜单 -->
	<string name="order_by_time_asc">按时间升序排列</string>
	<string name="order_by_time_desc">按时间降序排列</string>
	<string name="add_account_book_item">添加账目</string>
	<string name="modify_account_book_item">修改账目</string>
	<string name="delete_account_book_item">删除账目</string>
	<string name="clear_account_book">清空账簿</string>
	<string name="close_account_book">关闭账簿</string>
	<string name="read_account_book_from_def_idir">从内部存储的默认目录读取账簿</string>
	<string name="read_account_book_from_def_edir">从外部存储的默认目录读取账簿</string>
	<string name="read_account_book_from_cdir">从自定义目录读取账簿</string>
	<string name="save_account_book_to_def_idir">保存账簿到内部存储的默认目录</string>
	<string name="save_account_book_to_def_edir">保存账簿到外部存储的默认目录</string>
	<string name="save_account_book_to_cdir">保存账簿到自定义目录</string>
	<!--	-->
	<!-- 编辑账目 -->
	<string name="name">名称</string>
	<string name="time">时间</string>
	<string name="zone_offset">时区偏移</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="hour">时</string>
	<string name="minute">分</string>
	<string name="second">秒</string>
	<string name="site">地点 / 站点</string>
	<string name="account">使用的帐户</string>
	<string name="currency_used_by_the_txn">交易使用的货币</string>
	<string name="amount_of_the_txn">交易金额</string>
	<string name="exchange_rate">汇率</string>
	<string name="details">详细说明</string>
	<string name="OK">确定</string>
	<string name="cancel">取消</string>
	<!--	-->
	<!-- 错误信息 -->
	<!--	-->
</resources>