<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group>
		<item
			android:id="@+id/MainOptionsOrderByTime"
			android:title="@string/order_by_time_asc" />
	</group>
	<group>
		<item
			android:id="@+id/MainOptionsAddAccountBookItem"
			android:title="@string/add_account_book_item" />
		<item
			android:id="@+id/MainOptionsClearAccountBookItem"
			android:title="@string/clear_account_book" />
	</group>
	<group>
		<item
			android:id="@+id/MainOptionsReadFromDefaultInternalLocation"
			android:title="@string/read_account_book_from_def_edir" />
		<item
			android:id="@+id/MainOptionsReadFromDefaultExternalLocation"
			android:title="@string/read_account_book_from_def_edir" />
		<item
			android:id="@+id/MainOptionsReadFromCustomLocation"
			android:title="@string/read_account_book_from_cdir" />
	</group>
	<group>
		<item
			android:id="@+id/MainOptionsSaveToDefaultInternalLocation"
			android:title="@string/save_account_book_to_def_idir" />
		<item
			android:id="@+id/MainOptionsSaveToDefaultExternalLocation"
			android:title="@string/save_account_book_to_def_edir" />
		<item
			android:id="@+id/MainOptionsSaveToCustomLocation"
			android:title="@string/save_account_book_to_cdir" />
	</group>
</menu>